# raves-on-rust

./: README.md
crates-io-placeholder/: Cargo.toml  README.md
esp32c3_osc_receiver/: Cargo.toml  README.md
esp32c3_osc_receiver/.cargo/: config.toml
esp32c3_osc_receiver/src/: main.rs
led_tester/: Cargo.toml  README.md
led_tester/.cargo/: config.toml
led_tester/src/: main.rs
osc_receiver/: Cargo.toml
osc_receiver/src/: led_strip.rs  lib.rs  platform.rs
pi_osc_receiver/: Cargo.toml  micro-tree.service  pi_osc_receiver.service
pi_osc_receiver/.cargo/: config.toml
pi_osc_receiver/scripts/: runner.sh
pi_osc_receiver/src/: main.rs
