[package]
name = "esp-osc-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.3"

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", default-features = false, features = ["esp32c3", "embedded-svc"] }

esp32c3-hal = { package="esp32c3-hal", git = "https://github.com/esp-rs/esp-hal" }
riscv-rt = { version = "0.8.1" }
smoltcp = { version = "0.8.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4", "alloc"] }
log = "0.4.17"
embedded-svc = { version = "0.21.2", default-features = false, features = [ "alloc" ] }

esp-println = { git = "https://github.com/esp-rs/esp-println.git", features = [ "esp32c3" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace.git", features = [ "esp32c3", "panic-handler", "exception-handler" ] }

[build-dependencies]
riscv-target = { version = "0.1.2" }
