[package]
name = "led_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { package="esp32c3-hal", git = "https://github.com/esp-rs/esp-hal" }
riscv-rt = { version = "0.8.1" }
esp-println = { git = "https://github.com/esp-rs/esp-println.git", features = [ "esp32c3" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace.git", features = [ "esp32c3", "panic-handler", "exception-handler" ] }
apa102-spi = "0.3.2"
smart-leds = "0.3.0"
log = "0.4.17"
